...
                appNameView
                
                taglineView
                
                Spacer()
                
                loadingIndicator
                
                Spacer()
                    .frame(height: 60)
            }
        }
        .ignoresSafeArea()
...
